<resources>
    <string name="app_name">Cities</string>
    <string name="about_title">About</string>

    <string name="city_list_error_text">Error. Tap here to retry</string>
    <string name="cities_search_view_hint">Type to search a city</string>

    <string name="city_list_item_coordinates_mask">%.3f, %.3f</string>

    <string name="city_map_screen_action_bar_header">Back</string>

    <string name="main_screen_initialization_loading_progress_text">Loading city list…</string>

    <string name="city_info_country_mask">Located in the country: %s</string>
    <string name="city_info_latitude_mask">Latitude: %f</string>
    <string name="city_info_longitude_mask">Longitude: %f</string>

    <string name="about_screen_company_name">Company name:\u0020</string>
    <string name="about_screen_company_address">Company address:\u0020</string>
    <string name="about_screen_company_city">Company city:\u0020</string>
    <string name="about_screen_company_postal">Company postal:\u0020</string>
    <string name="about_screen_about">About:\u0020</string>
    <string name="about_screen_loading_failed">Loading Failed</string>

</resources>
